postfwd (1.30-1) UNRELEASED; urgency=low

  * New upstream release
   - new parser enhancement is able to omit the trailing "\" for multi-line rules
   - new plugin interface (BETA)
   - Time::HiRes is used if available
   - multiple rate limits for the same items are supported now
   - new $$ratecount variable for rate() actions
   - new option --keep_rates
   - queueid is logged when available
   - rate limits fixed
   - new --debug class 'cleanup'
   - documentation updates and fixes
  * Suppress output on restarting via init script (Closes: #636782), thanks
    Martin F. Krafft for reporting
  * Ship hapolicy and manpage
  * Reorganize documentation
   - Add new files from upstream to documentation
   - Add 10_hapolicy_manpage.dpatch to have a manpage for hapolicy
   - Changelogs where renamed by upstream

 -- Jan Wagner <waja@cyconet.org>  Thu, 10 Feb 2011 08:40:51 +0100

postfwd (1.20-1) unstable; urgency=low

  * New upstream release
    - Release contains postfwd1 and postfwd2 now (Closes: #582969)
    - new --umask setting allows to set filepermissions for pidfiles and unix
      domain sockets
    - Rate limit code rewritten
    - rbl checks disabled for ipv6 addresses, cidr compare will switch to
      default (regex/string)
    - rbl check could fail on multiple dnsbl answers
  * Add dpatch infrastructure
  * Provide update-alternatives for choosing the postfwd variant
  * Install also CHANGELOG2
  * Bump Standards-Version to 3.9.1, no changes needed

 -- Jan Wagner <waja@cyconet.org>  Thu, 10 Feb 2011 08:38:04 +0100

postfwd (1.18-1) unstable; urgency=low

  * New upstream release
    - Fixed bug when comparing sender and recipient addresses, like
      "sender=$$recipient"

 -- Jan Wagner <waja@cyconet.org>  Thu, 29 Apr 2010 08:46:25 +0200

postfwd (1.17-1) unstable; urgency=low

  * New upstream release
    - Net::DNS internal errors will now be handled gracefully
    - default for options --dns_max_ns_a_lookups and --dns_max_mx_a_lookups of