@@ -1,0 +1,4 @@
+doc/hapolicy.html
+doc/hapolicy.txt
+tools/hapolicy/hapolicy.*
+tools/hapolicy/hapolicy[0-9a-zA-Z.]*
