@@ -1,0 +1,1 @@
+man/man8/hapolicy.1
