@@ -1,3 +1,2 @@
 debian/tmp/postfwd1.8
 man/man8/postfwd2.8
-man/man8/hapolicy.1
