@@ -1,7 +1,8 @@
 postfwd (1.30-1) UNRELEASED; urgency=low
 
   * New upstream release
-   - new parser enhancement is able to omit the trailing "\" for multi-line rules
+   - new parser enhancement is able to omit the trailing "\" for multi-line
+     rules
    - new plugin interface (BETA)
    - Time::HiRes is used if available
    - multiple rate limits for the same items are supported now
@@ -13,7 +14,7 @@ postfwd (1.30-1) UNRELEASED; urgency=low
    - documentation updates and fixes
   * Suppress output on restarting via init script (Closes: #636782), thanks
     Martin F. Krafft for reporting
-  * Ship hapolicy and manpage
+  * Add hapolicy and manpage into separate binary package
   * Reorganize documentation
    - Add new files from upstream to documentation
    - Add 10_hapolicy_manpage.dpatch to have a manpage for hapolicy
